k8strain2/istio/test/websocket/svc-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: scs-face-nodeport
  namespace: test
spec:
  ports:
  - name: scs-face
    nodePort: 30090
    port: 80
  selector:
    app: scs-face
  type: NodePort
