k8strain2/istio/test/websocket/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: scs-face
  namespace: test
spec:
  ports:
  - name: scs-face
    port: 80
  selector:
    app: scs-face
