k8strain2/istio/test/websocket/ws.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "20"
    description: 智慧工地-人脸考勤
    gatewayUrl: http://gateway.test.ciiplat.com/scs-face
    gitUrl: http://git.ut.cameobespoke.com/bigdata/scs.git
    innerUrl: http://scs-face.bigdata:80
  name: scs-face
  namespace: test
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: scs-face
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: scs-face
    spec:
      containers:
      - command:
        - java
        - -jar
        - /opt/microservice.jar
        - --spring.profiles.active=test
        image: swr.cn-north-4.myhuaweicloud.com/cotte-internal/bigdata-scs-face:14999
        imagePullPolicy: Always
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /scs-face/actuator/health
            port: 80
            scheme: HTTP
          initialDelaySeconds: 120
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 3
        name: scs-face
        ports:
        - containerPort: 80
          name: scs-face
          protocol: TCP
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /scs-face/actuator/health
            port: 80
            scheme: HTTP
          initialDelaySeconds: 120
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 3
        resources:
          limits:
            cpu: "1"
            memory: 2500Mi
          requests:
            cpu: 100m
            memory: 500Mi
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      imagePullSecrets:
      - name: registry-pull-secret
      restartPolicy: Always
      schedulerName: default-scheduler
      terminationGracePeriodSeconds: 5
